added new images for unit 2

--- a/_units/02.md
+++ b/_units/02.md
@@ -78,17 +78,17 @@ In addition to the pinna, the outer ear includes the auditory canal and the ear 
 The middle ear is a cavity between the tympanic membrane and the oval window of the cochlea. The middle ear consists of middle ear bones and the Eustachean tube.
 
 {% comment %} The middle ear. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/ear.html). Was this supposed to be another picture? this one? {% endcomment %}
-{% include img-figure url="/MUTOR/assets/images/middleear.gif" description="Middle Ear Ossicles" %}
+{% include img-figure url="/MUTOR/assets/images/middleear.png" description="Middle Ear Ossicles" %}
 Middle ear bones, or ossicles, include the incus, malleus, and stapes. These ossicles vibrate as they receive sound vibrations from the tympanic membrane. One of the ossicles, the stapes, is attached to the oval window of the cochlea in the inner ear; thus the vibrations of the stapes is received by the cochlea.
 
-{% include img-figure url="/MUTOR/assets/images/ossicles_model.gif" description="Middle Ear Ossicles" %}
+{% include img-figure url="/MUTOR/assets/images/ossicles_model.png" description="Middle Ear Ossicles" %}
 {% comment %} A model of the middle ear ossicles {% endcomment %}
 
 The Eustachean tube is a fluid-filled tube that connects the middle ear to the pharynx (the back of the nose and throat). Its function is to adjust air pressure in the auditory system. When confronted with changes in air pressure, the Eustachean tube opens briefly to let air pressure equalize on either sides of the tube. It can also be opened voluntarily by yawning or opening one's mouth, as is often experienced during rapid air pressure changes in an airplane. The Eustachean tube also directs mucus away from the middle ear, and is occasionally the site of ear infections due to bacterial growth in the mucus lining of the tube.
 
 # Inner Ear
 
-{% include img-figure url="/MUTOR/assets/images/innerear.gif" description="Inner Ear" %}
+{% include img-figure url="/MUTOR/assets/images/innerear.png" description="Inner Ear" %}
 {% comment %} The inner ear. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/eari.html) {% endcomment%}
 
 The inner ear is the region between the oval window and the auditory nerve. It consists of the semicircular canals and the cochlea, which includes various structures. The auditory nerve leads out of the cochlea and into the brainstem.
@@ -166,7 +166,7 @@ The brainstem and midbrain include a set of neural regions which relay the nerve
 
 The auditory nerve leads out of the cochlea and into the brainstem. On the surface of the brainstem, the auditory and the vestibular nerves combine and constitute the VIIIth cranial nerve. A tumor in the VIIIth cranial nerve is called acoustic neuroma and can result in deafness.
 
-{% include img-figure url="/MUTOR/assets/images/cn8.jpg" description="Cranial Nerve VIII (auditory nerve in red)" %}
+{% include img-figure url="/MUTOR/assets/images/cn8.png" description="Cranial Nerve VIII (auditory nerve in red)" %}
 {% comment %} Cranial nerve, with the VIIIth nerve (auditory nerve) in red.
 (image source: http://www.gwc.maricopa.edu/class/bio201) {% endcomment %}
   
