new images for unit 3

--- a/_units/03.md
+++ b/_units/03.md
@@ -49,7 +49,7 @@ In the natural world, sounds rarely occur in complete isolation. Our sonic envir
 
 An analogy of the auditory system's ability to construct a picture of the world can be drawn from the following scenario.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_lakescene.jpg" description="Lake Scene" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_lakescene.png" description="Lake Scene" %}
 
 Here is the surface of an irregularly-shaped lake, with two inlets coming out of its side. A fishing bob is floating on each of the inlets. 
 Now suppose you are only allowed to look at the fishing bobs, but you must answer the following questions: 
