--- a/_units/02.md
+++ b/_units/02.md
@@ -47,22 +47,21 @@ Finally we look at when the auditory system malfunctions. Types of hearing loss 
 
 # The auditory pathway (ear & brain) 
 
-The anatomy section of this unit will cover the peripheral and central auditory nervous sysstems, from the outer ear
+The anatomy section of this unit will cover the peripheral and central auditory nervous systems, from the outer ear
 all the way up to the secondary auditory cortex. The auditory periphery includes various parts of the ear and ends
 at the auditory nerve, which leades from the cochlea to the brainstem. The central nervous system includes the
-brain and the spinal cord, and parts of the central nervous system involved in auditory function are in the brainstem, the midbrain, and the cerebral cortex. Afferent pathways include all neural pathways going from the auditory periphery to the cerebral cortex, whereas efferent pathways are all pathways coming from the cortex back to the periphery. Both pathways will be discussed in the present unit. Emphasis will be placed on the function as well as structure of each region along the auditory pathway.
+brain and the spinal cord, with parts of the central nervous system involved in auditory function being in the brainstem, the midbrain, and the cerebral cortex. Afferent pathways include all neural pathways going from the auditory periphery to the cerebral cortex, whereas efferent pathways are all pathways coming from the cortex back to the periphery. Both pathways will be discussed in the present unit. Emphasis will be placed on the function as well as structure of each region along the auditory pathway.
 
 {% include img-figure url="/MUTOR/assets/images/aud_anatomy_overview.jpg" description="The Auditory Pathway" %}
 
 # Structure vs Function
 
-A detailed look at each anatomical region of the auditory system must include both the structure and the function of each region. Many regions along the auditory pathway serve specific functions, and some aspects of their structure have evolved especially to optimize these functions. Two of the main auditory function we will discuss are Tonotopic Mapping and Binaural Hearing. While both are important functions of the auditory system as a whole, specialized mechanisms are built into the Cochlea and the Superior Olive to enable Tonotopic Mapping and Binaural Hearing respectively. we will see how the structure of each part of the anatomy is optimized to perform its function.
+A detailed look at each anatomical region of the auditory system must include both the structure and the function of each region. Many regions along the auditory pathway serve specific functions, and some aspects of their structure have evolved especially to optimize these functions. Two of the main auditory function we will discuss are _Tonotopic Mapping_ and _Binaural Hearing_. While both are important functions of the auditory system as a whole, specialized mechanisms are built into the Cochlea and the Superior Olive to enable Tonotopic Mapping and Binaural Hearing respectively. we will see how the structure of each part of the anatomy is optimized to perform its function.
 
 # The Ear
 
-"The ear", for our purposes, is not just what sticks out on each side of your head. Although the visible part of the ear, also known as the pinna, constitutes the outer ear and plays an important role in hearing, TheEar also includes the middle, and inner ear, each of which has structures specialized for their functions. The middle ear has a series of ossicles, or tiny bones which conduct and amplify the sound signal. The inner ear is of vital importance to hearing as it includes the Cochlea, perhaps the most important structure in the auditory periphery, which transduces sound signals into nerve impulses.
+"The ear", for our purposes, is not just what sticks out on each side of your head. Although the visible part of the ear, also known as the pinna, constitutes the outer ear and plays an important role in hearing, The ear also includes the middle, and inner ear, each of which has structures specialized for their functions. The middle ear has a series of ossicles, or tiny bones which conduct and amplify the sound signal. The inner ear is of vital importance to hearing as it includes the Cochlea, perhaps the most important structure in the auditory periphery, which transduces sound signals into nerve impulses.
 
-{% include note author="vg" text="I'm not so sure you wanted to use the same image two times Psyche. Wanted you to use another one? " %}
 {% include img-figure url="/MUTOR/assets/images/ear_overview.png" description="The Ear" %}
 {% comment %} Overview of the ear, showing the outer, middle, and inner ear. (image source: Rossing et al, 2001) {% endcomment %}
 {% comment %} I think one of this pictures doesn't correspond to the one Pyiche wanted to show. I kept both anyway. {% endcomment%}
@@ -112,7 +111,7 @@ A cross-sectional view of the cochlea shows that it is divided by the Reissner m
 
 Cross-section view of one turn of the cochlea.
 
-These membranes together divide the cochlea into its fluid-filled chambers: scala vestibuli, scala tympani, and scala media. Importantly, the middle section section contains the Organ of Corti, which includes the basilar membrane, the tectorial membrane, and the hair cells between these two membranes.
+These membranes together divide the cochlea into its fluid-filled chambers: scala vestibuli, scala tympani, and scala media. Importantly, the middle section contains the Organ of Corti, which includes the basilar membrane, the tectorial membrane, and the hair cells between these two membranes.
 
 ## Organ of Corti
 
@@ -152,7 +151,7 @@ The cochlea is a coiled structure, contains the entire length of the basilar mem
 {% include img-figure url="/MUTOR/assets/images/bekesy.png" description="Data on Tonotopy from von Békésy " %}
 {% comment %} (image source: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746) {% endcomment %}
 
-The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stirrup. The point of optimal excitation moved further away from the stirrup as the stimulus frequency decreased.
+The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stapes (stirrup). The point of optimal excitation moved further away from the stapes as the stimulus frequency decreased.
 
 # Brainstem Pathways
 
@@ -177,7 +176,7 @@ Overview of the auditory pathway from the brainstem to the cortex.
 1. Lateral Lemniscus
 1. Inferior Colliculus, which is especially sensitive to Amplitude Modulation 
 1. Medial Geniculate Nucleus
-1. Cochlear Nuclei
+1. Primary Auditory Cortex
 
 The cochlear nuclei (singular: cochlear nucleus) are first relay centers of auditory information in the brainstem,
 Cochlear nuclei include the dorsal cochlear nucleus and the ventral cochlear nucleus. Both receive input from the
@@ -217,7 +216,7 @@ The lateral lemniscus is anatomically divided into the Ventral, Dorsal, and Inte
 
 The inferior colliculus is a collection of nuclei which receives input from the axons of the lateral lemniscus and is located in the midbrain. It operates as a site of early communication between the visual and auditory senses, as well as a feedback-providing mechanism which provides output to the cochlea.
 
-{% include img-figure url="/MUTOR/assets/IMAGES/ic.jpg" description="Inferior Colliculus" %}
+{% include img-figure url="/MUTOR/assets/images/ic.jpg" description="Inferior Colliculus" %}
 {% comment %} (image source: http://serous.med.buffalo.edu/hearing/ic.html) Cross-section of the midbrain, with the inferior colliculi highlighted in blue. {% endcomment %}
 
 The inferior colliculus is one of the most important relay centers in the auditory system. Roles of the inferior colliculus include crossmodal communication, orienting to novel stimuli, providing efferent feedback, and detecting amplitude and frequency modulation.
