--- a/_units/02.md
+++ b/_units/02.md
@@ -186,9 +186,9 @@ along the auditory pathway that generates electrical signals measurable from the
 The Brainstem Evoked Response. It is a complex of seven waveform components, the first of which are thought to reflect the firing of the cochlear nuclei.
 
 ## Superior Olive
-The superior olivary complex include the medial and lateral superior olivary nuclei. These are hubs of neurons that receive input from the dorsal and ventral cochlear nuclei and fire outputs to the nuclei of lateral lemniscus. The superior olivary nuclei are the first along the pathway to receive inputs from both ears, making this complex important for BinauralHearing. The medial superior olive (MSO) contains more neural representation of low frequencies whereas the lateral superior olive (LSO) has more connections for high frequencies. The MSO compares low-frequency wavelengths to compute the time difference of arrival between the two ears (Interaural Time Differences, ITDs) whereas the LSO compares high-frequency wavelengths to compute the difference in sound level between the ears (Interaural Level
+The superior olivary complex include the medial and lateral superior olivary nuclei. These are hubs of neurons that receive input from the dorsal and ventral cochlear nuclei and fire outputs to the nuclei of lateral lemniscus. The superior olivary nuclei are the first along the pathway to receive inputs from both ears, making this complex important for Binaural Hearing. The medial superior olive (MSO) contains more neural representation of low frequencies whereas the lateral superior olive (LSO) has more connections for high frequencies. The MSO compares low-frequency wavelengths to compute the time difference of arrival between the two ears (Interaural Time Differences, ITDs) whereas the LSO compares high-frequency wavelengths to compute the difference in sound level between the ears (Interaural Level
 
-## Coincidence detectors in the mso
+## Coincidence detectors in the MSO
 
 The auditory system's ability to localize sounds depends to a certain extent on the shape of the pinna and the head (see Outer Ear), but the bulk of this amazing ability depends on the binaural system. When sounds arrive from a certain location, the wavefronts arrive at the closer ear first, and the time difference between the arrival times of sound to the closer ear and the further ear is known as interaural time difference, or ITD. Sounds from a certain location also contain more energy at the closer ear compared to the further ear, and this difference in sound levels is termed interaural level difference, or ILD. Since low-frequency sounds have longer wavelengths and are thus more likely to get around the head, ILDs tend to be a more helpful cue for higher frequencies whereas ITDs are more helpful for low frequencies.
 
