--- a/_units/02.md
+++ b/_units/02.md
@@ -415,6 +415,7 @@ Types of hearing loss are categorized by the site of biological abnormality. The
 ## Conductive hearing loss
 
 Conductive hearing loss is hearing damage due to obstruction, injury, or disease in the outer or middle ear. This may be due to ear infections, the buildup of earwax in the ear canal, fluid buildup in the Eustachean tube (which may be due to the common cold), or a biological malformation of the middle ear ossicles. Conductive hearing loss can be cured if the abnormality is reversible; for instance, curing an ear infection with antibiotics will restore hearing.
+
 ## Sensorineural hearing loss
 
 Sensorineural hearing loss refers to damage in the cochlea or the auditory nerve. Most commonly this involves damage in the inner and/or outer hair cells on the basilar membrane of the cochlea. Sensorineural hearing loss may result from old age, exposure to loud noises, and some drugs such as streptomyosin and other antibiotics which, when taken in large dosages, result in damage to the hair cells and the auditory nerve.
@@ -422,7 +423,7 @@ Sensorineural hearing loss refers to damage in the cochlea or the auditory nerve
 Presbyacusis is the loss of hearing as a result of old age. The hearing loss quite common and is most prominent at high frequencies. While the healthy young individual can hear an optimal frequency range of 20-20,000Hz, The average 50 year old can no longer hear above 17,000Hz. Because of the shape of the audiogram, which relates audibility to frequency, the loss of high-frequency hearing due to sound exposure and old age is termed ski-slope hearing loss.
 
 
-{% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparason Normal Hair Cell vs. Damaged Hair Cell" %}
+{% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparison Normal Hair Cell vs. Damaged Hair Cell" %}
 {% comment %} (image source: http://www.hei.org/education/health/loss.htm) Normal versus damaged hair cells {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/audiogram_presby.gif" description="Presbyacusis Audiogram" %}
