--- a/_units/03.md
+++ b/_units/03.md
@@ -314,8 +314,8 @@ where P is the initial power of the signal, r is the distance from the source in
 The later reflections also depend on the absorptive quality of the surfaces they bounce off of and can be calculated by
 
 \begin{equation}
-Ir={missing equation}
-\label{eq:missing-equation}
+Ir=𝝰I
+\label{eq:sound-absorption}
 \end{equation}
 
 
@@ -330,42 +330,21 @@ RT_{60}=C\frac{V}{A}
 
 where RT_60 is the reverb time, V is the volume of the enclosure, A is the sum of the absorption coefficients for each surface, and C is a constant that takes on 0.161 for calculations in meters and 0.049 for feet.
 
-Sound examples 1-3, and figures 9-11 are impulse responses of three different halls and their sonograms. Notice that the reverb of each hall decays in a different way and that different frequency regions decay quicker than others but that in general the low frequencies remain active longer than the high frequencies—this is a typical property of the reverb of most enclosed spaces. Also, note that the early reflections can be heard clearly in the second and third examples.
+Sound examples 1-3, and figures 3.20 - 3.22 are impulse responses of three different halls and their sonograms. Notice that the reverb of each hall decays in a different way and that different frequency regions decay quicker than others but that in general the low frequencies remain active longer than the high frequencies—this is a typical property of the reverb of most enclosed spaces. Also, note that the early reflections can be heard clearly in the second and third examples.
 
-<html>
-  <head>
-    <title>Larry</title>
-  </head>
-  <body>
+{% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
     <audio controls src="/MUTOR/assets/audios/unit3_impulse1.wav">
       Your browser does not support the audio element.
     </audio>
-  </body>
-</html>
-<html>
-  <head>
-    <title>Larry</title>
-  </head>
-  <body>
+{% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
     <audio controls src="/MUTOR/assets/audios/unit3_impulse2.wav">
       Your browser does not support the audio element.
     </audio>
-  </body>
-</html>
-<html>
-  <head>
-    <title>Larry</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
+ {% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
+   <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
       Your browser does not support the audio element.
     </audio>
-  </body>
-</html>
 
-{% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
-{% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
-{% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
 
 Sound samples taken from:
 http://www.cksde.com/p_6_250.htm
