--- a/_units/03.md
+++ b/_units/03.md
@@ -333,18 +333,28 @@ where RT_60 is the reverb time, V is the volume of the enclosure, A is the sum o
 Sound examples 1-3, and figures 3.20 - 3.22 are impulse responses of three different halls and their sonograms. Notice that the reverb of each hall decays in a different way and that different frequency regions decay quicker than others but that in general the low frequencies remain active longer than the high frequencies—this is a typical property of the reverb of most enclosed spaces. Also, note that the early reflections can be heard clearly in the second and third examples.
 
 {% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
+
+  <body>
     <audio controls src="/MUTOR/assets/audios/unit3_impulse1.wav">
       Your browser does not support the audio element.
-    </audio>
+   </audio>
+   </body>
+   
 {% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
+
+  <body>
     <audio controls src="/MUTOR/assets/audios/unit3_impulse2.wav">
       Your browser does not support the audio element.
-    </audio>
+   </audio>
+   </body>
+    
  {% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
-   <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
+ 
+   <body>
+     <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
       Your browser does not support the audio element.
     </audio>
-
+   </body>
 
 Sound samples taken from:
 http://www.cksde.com/p_6_250.htm
