--- a/_units/03.md
+++ b/_units/03.md
@@ -334,27 +334,27 @@ Sound examples 1-3, and figures 3.20 - 3.22 are impulse responses of three diffe
 
 {% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
 
-  <body>
+  <html>
     <audio controls src="/MUTOR/assets/audios/unit3_impulse1.wav">
       Your browser does not support the audio element.
    </audio>
-   </body>
+   </html>
    
 {% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
 
-  <body>
+  <html>
     <audio controls src="/MUTOR/assets/audios/unit3_impulse2.wav">
       Your browser does not support the audio element.
    </audio>
-   </body>
+   </html>
     
  {% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
  
-   <body>
+   <html>
      <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
       Your browser does not support the audio element.
     </audio>
-   </body>
+   </html>
 
 Sound samples taken from:
 http://www.cksde.com/p_6_250.htm
