coarse edits chapt 2

--- a/_units/00.md
+++ b/_units/00.md
@@ -114,13 +114,11 @@ As we explore the neuroscience portion of the curriculum, we shall explore these
 
 # Computer Modeling
 
-> EDIT LINE
-
 The cogntive sciences depend on computational sciences to help further understanding of both the mind and behavior.
 The main reason for this is a belief among cognitive scientists that cognition requires computation. 
 A lot of ink has been spilled over the metaphor between brains and computers.
 Generally speaking, the human brain can be considered a computer in that it computes things.
-It is not a computer in the way that a laptop or PC works in that there is a motherboard, graphics card, and random access memory.^[Link here]
+It is not a computer in the way that a laptop or PC works in that there is a motherboard, graphics card, and random access memory.^[https://medium.com/the-spike/yes-the-brain-is-a-computer-11f630cad736]
 
 Since the brain does compute things, the computational sciences play a large role in cognitive science research. 
 We discuss a few ways here.
