--- a/_units/00.md
+++ b/_units/00.md
@@ -6,7 +6,7 @@
 title: Research Design and Methods
 number: 0
 short_description: Research Design and Methods
-summary: Statistics, Quantitative and Qualitative Methods, Ethical principles of interdisciplinary research.
+summary: In this unit we provide an overview of the tools and methods that are in use in the study of music perception and cognition. These include qualitative and quantitative methods, specifically methods from cognitive science, specifically computational modeling, experimental psychology, and cognitive neuroscience. Statistics, which is the scientific understanding of data for the purpose of drawing conclusions, is the backbone of understanding across all these fields of study. We conclude with some practical information on getting started in conducting your own music science research, such as ethical principles and considerations in interdisciplinary research.
 authors: 
  - Psyche Loui
 topics: [experimental psychology, neuroscience, computer modeling]
