updates to unit 4

--- a/_units/04.md
+++ b/_units/04.md
@@ -61,7 +61,7 @@ later in this unit, and one contextual,
 as "tonal tension" requires exposure to, and some degree of education in
 European tonal music. These two ways of considering dissonance correspond
 roughly to cognitive processing from the "bottom-up" and "top-down",
-which we will continue to encounter throughout these units.
+concepts that we will continue to encounter throughout these units.
 
 # Early Models of Consonance and Dissonance
 
@@ -164,7 +164,7 @@ ratios on the basis of the appearance of "beats" that occur when two
 tones have a very small difference in frequency. As noted some 100
 years later by Plomp and Levelt 
 {% include cite ref="plomp_and_levelt_tonal_consonance" %}, this idea is not
-without controversy and has been "severly critiqued" from a number of angles.
+without controversy and has been "severely critiqued" from a number of angles.
 Nevertheless, the notion that the ear is somehow sensitive to the different
 frequencies present in a complex tone was demonstrated by Hungarian
 biophysicist 
@@ -283,11 +283,7 @@ when they are in the bass register. This also confirms what many musicians
 already know, which is that intervals that are normally considered consonant
 like thirds, can sound rough and dissonant (muddy) in the low register.
 
-{% include note author="jm"
-text="need a number of examples here to play with tones moving in
-and out of the critical band, with and without harmonics. in the original
-materials, there was a critical band demo, and a demo presenting the
-tritone as both consonant and dissonant." %}
+{% include img-figure url="/MUTOR/assets/images/MUTOR_CriticalBand.png" description="" %}
 
 # Complex Tones
 
@@ -331,7 +327,21 @@ chord from Arnold Schoenberg's work *Farben*, Op. 16.
 description="Roughness estimates for three orchestrations of the same
 harmony from Arnold Schoenberg's Farben, Op. 16." %}
 
-{% include note author="jm" text="include audio examples here." %}
+{% include begin-figure description="Farben, first orchestration" %}
+<audio controls>
+<source src="/MUTOR/assets/audios/farben-orch1.mp3" type="audio/mpeg">
+</audio>
+{% include end-figure %}
+{% include begin-figure description="Farben, second orchestration" %}
+<audio controls>
+<source src="/MUTOR/assets/audios/farben-orch2.mp3" type="audio/mpeg">
+</audio>
+{% include end-figure %}
+{% include begin-figure description="Farben, sine tones" %}
+<audio controls>
+<source src="/MUTOR/assets/audios/farben-sin.mp3" type="audio/mpeg">
+</audio>
+{% include end-figure %}
 
 As can be seen in figure {{ fignum }}, and heard in the audio examples, 
 the sonority is quite smooth when played with pure tones, however, the two
@@ -359,7 +369,11 @@ to estimate the overall roughness of a sonority will not provide a good
 model. An example can be found in the opening sonority of Gy&ouml;rgy
 Ligeti's *Atmosph&egrave;res*, which is a massive cluster of semitones
 spanning a large part of the orchestral range. 
-{% include note author="jm" text="include audio examples here." %}
+{% include begin-figure description="Ligeti, Atmosph&egrave;res." %}
+<audio controls>
+<source src="/MUTOR/assets/audios/atmospheres.mp3" type="audio/mpeg">
+</audio>
+{% include end-figure %}
 If our simple additive model
 of roughness held, this should be an extremely dissonant chord, where in fact
 the experience of it is as quite a smooth sonority. This is likely due to 
@@ -372,7 +386,22 @@ description="Top: Sum of two sinusoids at 440 Hz and 466.1638 Hz
 between 440 Hz and 466.1638 Hz, with random phases. Middle Bottom:
 Closeup of the top plot. Bottom: Closeup of the middle-top plot." %}
 
-{% include note author="jm" text="include audio examples here." %}
+{% include begin-figure description="Ligeti, Atmosph&egrave;res." %}
+<audio controls>
+<source src="/MUTOR/assets/audios/atmospheres.mp3" type="audio/mpeg">
+</audio>
+{% include end-figure %}
+{% include begin-figure description="Two sine tones: 440 Hz and 466.1638 Hz (minor second)." %}
+<audio controls>
+<source src="/MUTOR/assets/audios/m2.mp3" type="audio/mpeg">
+</audio>
+{% include end-figure %}
+{% include begin-figure description="40 sine tones at random frequencies and phases between 440 Hz and 466.1638 Hz (minor second)." %}
+<audio controls>
+<source src="/MUTOR/assets/audios/cluster.mp3" type="audio/mpeg">
+</audio>
+{% include end-figure %}
+
 
 Figure {{ fignum }} presents two waveforms, one containing a sum of two 
 sinusoids a minor second apart, and the next containing 40 sinusoids 
@@ -386,7 +415,7 @@ plot is greatly reduced than that of the minor second.
 
 Our perception of dissonance is not absolute, that is to say, context matters.
 In 1968, Kameoka and Kuriyagawa demonstrated 
-{% include note author="jm" text="i need to review KK's work to say something about it..." %}.
+{% include note author="jm" text="this section is a placeholder to be completed later..." %}.
 {% include begin-figure description="A demonstration of
 Kameoka and Kuriyagawa's hierarchy of intervals." %}
 {% include note author="jm" text="interactive demo" %}
@@ -394,8 +423,6 @@ Kameoka and Kuriyagawa's hierarchy of intervals." %}
 
 {% include img-figure url="/MUTOR/assets/images/kameoka-hierarchy.png"
 description="Interval hierarchy (Kameoka and Kuriyagawa)" %}
-
-{% include note author="jm" text="probe tone here as well? the original tiddlywiki says that it is covered in another unit" %}
 
 
 ## Counterpoint and the Wright-Bregman Hypothesis
@@ -406,7 +433,7 @@ beating diminishes and sound less rough. This explains why binaural beats
 do not sound as rough as monaural beats. Wright and Bregman 
 {% include note author="jm" text="citation" %}
 propose that certain auditory cues such as stream segregation can prevent 
-the listener from hearing dissonant intervals as such. Figure 1 is an example 
+the listener from hearing dissonant intervals as such. The figure below is an example 
 taken from Auditory Scene Analysis ; in the top example, although the boxed 
 intervals are dissonant, that dissonance is supressed by the strong separation 
 of the two lines into separate streams. In the bottom example, the streaming 
