--- a/_units/07.md
+++ b/_units/07.md
@@ -6,7 +6,7 @@
 title: Rhythm
 number: 7
 short_description: Unit on Rhythm and Meter
-summary: rhythm, meter, coupled oscillators, neuronal entrainment
+summary: Rhythm is a fundamental element of music around the world. Here we explore the psychological and neural models of rhythm, beat, and meter. Rhythm is defined as the pattern of inter-onset intervals within a train of stimuli. Meter is the repeated, hierarchical characteristic of rhythm, such that repeating streams of stimuli recur at predictable rates. Beat is the perceived accent or emphasis that corresponds to the meter. Prominent models for understanding the perception and production of rhythm include the interval timing model, the covariance model, and the coupled oscillators model. The tuning of different neural populations, or neuronal entrainment, is posed as a likely brain mechanism underlying the perception of beat, rhythm, and meter. We will also discuss higher-level concepts of expressive timing and rubato, and time maps that have beenn derived to visualize these expressive deviations in rhythm and meter.
 authors: 
  - Psyche Loui
  - John MacCallum
