new images for unit 8

--- a/_units/08.md
+++ b/_units/08.md
@@ -85,8 +85,8 @@ Perceptual Completion of incomplete information (e.g., blind spot or TV noise ex
 
 In the example on the left, as with any reason, the elongated object continues under the round disk. Even infants make such assumptions and are surprised if they do not apply.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_completion-1.png" description="" %}
-{% include img-figure url="/MUTOR/assets/images/unit8_completion-2.png" description="We assume objects to continue when parts of it are hidden behind another object" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_completion-1.jpg" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_completion-2.jpg" description="We assume objects to continue when parts of it are hidden behind another object" %}
 
 {% include note author="vg" text="We need an auditory example here: Sound-noise band-sound" %}
 
@@ -265,7 +265,7 @@ To fit all four kinds of melodic textures onto the texture space:
 
 This texture space may be used to predict different musical styles. Different genres of music tend to occupy distinct areas of texture space, as shown below:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_texturespace.gif" description="Various Musical Genres projected onto Texture Space (image source: http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html)" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_texturespace.jpg" description="Various Musical Genres projected onto Texture Space (image source: http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html)" %}
 
 # References
 
