--- a/_units/11.md
+++ b/_units/11.md
@@ -5,8 +5,7 @@
 ###
 title: Music and Language
 number: 11
-Music and language are both systematic, organized uses of sound that enable communication and expression. In this unit we examine the many similarities and differences between music and language. We will compare and contrast music and language, with brief overviews into the evidence of shared neural and cognitive processing of the two domains. We then consider each major facet of the shared domains from the perspective of linguistics, starting from phonology (the study of sounds of language), then moving on to syntax (the ordering of units), semantics (the study of meaning), and prosody (the sounds of speech). We conclude that music and language share many important similarities, but that some of this sharing may be dependent on general characteristics of how the brain processes sequential sounds.
-summary: brief summary of the unit
+summary: Music and language are both systematic, organized uses of sound that enable communication and expression. In this unit we examine the many similarities and differences between music and language. We will compare and contrast music and language, with brief overviews into the evidence of shared neural and cognitive processing of the two domains. We then consider each major facet of the shared domains from the perspective of linguistics, starting from phonology (the study of sounds of language), then moving on to syntax (the ordering of units), semantics (the study of meaning), and prosody (the sounds of speech). We conclude that music and language share many important similarities, but that some of this sharing may be dependent on general characteristics of how the brain processes sequential sounds.
 authors: 
  - Psyche Loui
 topics: [music, language, syntax, prosody]
