--- a/_units/05.md
+++ b/_units/05.md
@@ -248,7 +248,7 @@ Heinrich Schenker has developed an analysis method (Schenkerian analysis) demons
 
 ## Tonnetz
 
-The Neo-Riemannian _tonnetz_ ...
+Just as Shepard's 5-dimensional model, the Neo-Riemannian _tonnetz_ is capable of representing fifth and third relationships. The tonnetz is frequently used in music theory to represent harmonic progression.
 
 {% include img-figure url="/MUTOR/assets/images/unit5_tonnetz-torus.jpg" description="Neo-Riemannian tonnetz" %}
 
