--- a/_units/05.md
+++ b/_units/05.md
@@ -186,7 +186,7 @@ The debate between pattern matching and autocorrelation models have received wid
 
 American psychologist Roger Shepard has developed a cognitive psychological model that represents pitch in a helix. In this case, the circular chroma circle (horizontal) can be distinguished from height (vertical). Octaves are always on the same side of the helix. By a clever construction tones can be formed, in which the dimension of the height is eliminated. These sounds, called "Shepard tones", are useful for constructing auditory illusions, e.g. endlessly rising or falling glissandi or scales. 
 
-{% include img-figure url="/MUTOR/assets/images/helix.png" description="Shepard's pitch helix. A similar model was already created in the mid-1800s." %}
+{% include img-figure url="/MUTOR/assets/images/helix.jpeg" description="Shepard's pitch helix. A similar model was already created in the mid-1800s." %}
 
 Taking the importance of fifths into consideration, Shepard extended his model to a double helix.
 
