updates to unit 6

--- a/_units/06.md
+++ b/_units/06.md
@@ -13,8 +13,10 @@ authors:
  - John MacCallum
 topics: [timbre, spectrum, spectral envelope, temporal envelope, attack]
 test_questions:
- - question 1
- - question 2
+ - Define timbre.
+ - What measurement does our perception of sonic "brightness" correlate to? How?
+ - What are formants? How do they contribute to speech?
+ - Describe the difference between the "temporal envelope" and the "spectral envelope".
 
 ###
 # page layout:
@@ -123,8 +125,10 @@ bin $$n$$, respectively.
 
 {% include img-figure url="/MUTOR/assets/images/tpt.ff.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>fortissimo</em>. The red line shows the spectral centroid. Compare with the figure below to see how it moves when the same note is played quieter." %}
 {% assign fig-tpt-ff = fignum %}
+<audio controls><source src="/MUTOR/assets/audios/tpt.ff.A4.mp3" type="audio/mpeg"></audio>
 {% include img-figure url="/MUTOR/assets/images/tpt.pp.A4_spec.png" description="The spectrum of a trumpet playing A4 (440 Hz) <em>pianissimo</em>. The red line shows the spectral centroid. Compare with the figure above to see how it moves when the same note is played louder." %}
 {% assign fig-tpt-pp = fignum %}
+<audio controls><source src="/MUTOR/assets/audios/tpt.pp.A4.mp3" type="audio/mpeg"></audio>
 Figures {{ fig-tpt-ff }} and {{ fig-tpt-pp }} both show the spectrum of
 a trumpet playing A4 (440 Hz), the top *fortissimo*, and the bottom 
 *pianissimo*. When played *fortissimo*, the spectral centroid is well
@@ -134,11 +138,6 @@ the bottom plot, the energy falls off rapidly after the third partial,
 and we can see that the spectral centroid is noticeably lower. This 
 should correlate with our experience of brass instruments which generally
 become brighter as they get louder.
-
-{% include note author="jm" text="the examples in this and the previous
-section should be interactive--you should be able to listen to the 
-examples as well as see the plots" %}
-
 
 ### Formants
 
@@ -153,7 +152,6 @@ of resonant structures in the vocal tract, while rooms can be said to
 have formants as well, due to their geometry construction, feature that 
 was exploited to great effect by Alvin Lucier in his recording
 *I Am Sitting in a Room*. 
-{% include note author="jm" text="link to or embed i am sitting in a room" %}
 
 {% include img-figure url="/MUTOR/assets/images/formants-benade.png" description="The formant structure of three different vowel sounds." %}
 Figure {{ fignum }} shows the formant structure of three different vowels.
@@ -295,8 +293,8 @@ removed. See if you can figure out which instrument produced them.
 |<audio controls><source src="/MUTOR/assets/audios/fade_nofade/oboe_fade.mp3" type="audio/mpeg"></audio>|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/oboe_nofade.mp3" type="audio/mpeg"></audio>|
 |<audio controls><source src="/MUTOR/assets/audios/fade_nofade/synth.mp3" type="audio/mpeg"></audio>|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/synth.mp3" type="audio/mpeg"></audio>|
 |<audio controls><source src="/MUTOR/assets/audios/fade_nofade/altosax_fade.mp3" type="audio/mpeg"></audio>|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/altosax_nofade.mp3" type="audio/mpeg"></audio>|
-|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/violin_nofade.mp3" type="audio/mpeg"></audio>|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/violin_fade.mp3" type="audio/mpeg"></audio>|
-|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/cello_nofade.mp3" type="audio/mpeg"></audio>|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/cello_fade.mp3" type="audio/mpeg"></audio>|
+|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/violin_fade.mp3" type="audio/mpeg"></audio>|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/violin_nofade.mp3" type="audio/mpeg"></audio>|
+|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/cello_fade.mp3" type="audio/mpeg"></audio>|<audio controls><source src="/MUTOR/assets/audios/fade_nofade/cello_nofade.mp3" type="audio/mpeg"></audio>|
 {:.fade-nofade-table}
 
 
